--- a/src/app/Components/toolbar/toolbar.component.html
+++ b/src/app/Components/toolbar/toolbar.component.html
@@ -1,6 +1,10 @@
-<mat-toolbar color="primary" [style.font.family]="'Jost'" fxLayoutAlign="space-between center">
-    <span>MyUsers</span>
+<mat-toolbar  [style.font.family]="'Jost'" fxLayoutAlign="space-between center">
+    <span class="toolbar-title">MyUsers</span>
 
-    <button mat-raised-button  colo="basic"> Log Out</button>
+    <button mat-raised-button class="logOut-btn"> Log Out</button>
 </mat-toolbar>
+
+
+
+
 
