--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-toolbar></app-toolbar>
+<div class="app-container">
 
+
+<app-toolbar></app-toolbar>
 <app-user-list></app-user-list>
 
+
+</div>
 
 
 
