--- a/src/app/Components/user-list/user-list.component.html
+++ b/src/app/Components/user-list/user-list.component.html
@@ -1,52 +1,60 @@
-
-<div class="buttonContainer" fxLayoutAlign="space-between center">
-
-    <button mat-raised-button 
-    color="primary" 
-    [style.cursor]="'pointer'" 
-    (click)="onClick()">
-    Show User List
+<div class="container">
+  <div class="buttonContainer" fxLayoutAlign="space-between center">
+    <button class="userList-btn" mat-button [style.cursor]="'pointer'">
+      List Of Users
     </button>
-    
-    <button mat-raised-button class="demo-button"  (click)="openDialog()">
-        Add User
+
+    <button mat-raised-button class="addUser-btn" (click)="openDialog()">
+      <mat-icon>add</mat-icon>
     </button>
+  </div>
+
+  <mat-form-field appearance="standard">
+    <mat-label [style.color]="'white'">Filter</mat-label>
+    <input class="filter-text" matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
+  </mat-form-field>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      </ng-container>
+
+      <!-- Progress Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="jobTitle">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Job Role</th>
+        <td mat-cell *matCellDef="let row">{{ row.jobTitle }}</td>
+      </ng-container>
+
+      <!-- Fruit Column -->
+      <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-button (click)="deleteUser(row.id)">
+            <mat-icon class="delete-icon">delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
 </div>
-
-
-
-
-
-<div class="container" fxLayoutAlign="center center"  >
-
-
-    <table *ngIf="showList" mat-table [dataSource]="users" class="mat-elevation-z8" >
-        
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-        <!-- Id Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> User Id</th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
-      
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-      
-        <!-- Job Role Column -->
-        <ng-container matColumnDef="jobTitle">
-          <th mat-header-cell *matHeaderCellDef> Job Role </th>
-          <td mat-cell *matCellDef="let element"> {{element.jobTitle}} </td>
-        </ng-container>
-      
-        <tr  class="pre" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    
-      
-
-</div>
-
