--- a/src/app/Components/user-list/user-list.component.scss
+++ b/src/app/Components/user-list/user-list.component.scss
@@ -1,23 +1,61 @@
-button {
+.userList-btn {
+  font-size: 20px;
+  padding-left: 0;
 }
 
 .container {
-    padding: 10px;
+  padding: 0 20px;
 }
 
 .buttonContainer {
-    margin-top: 20px;
-    padding: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
 
 table {
-    margin-top: 20px;
-    width: 100%;
-    padding: 0px !important;
-    .mat-form-field {
-        font-size: 14px;
-        width: 100%;
-      }
+  
+  margin-top: 20px;
+  width: 100%;
+  padding: 0px !important;
+
+  td, th {
+    width: 25%;
   }
 
-  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+}
+
+.mat-table {
+  border-spacing: 15px;
+  background-color: #24406a;
+}
+
+
+.mat-header-cell {
+  font-size: 1rem;
+  color: white;
+}
+
+.mat-cell {
+  color: white;
+}
+
+button {
+  color: white;
+}
+
+.addUser-btn {
+  border-radius: 15px;
+  background-color: #ffb41f;
+}
+
+.delete-icon {
+  color: #ffb41f;
+}
+
+.filter-text {
+  color: white;
+}
