added login module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
+<router-outlet></router-outlet>
 <div class="app-container">
 
 
-<app-toolbar></app-toolbar>
-<app-user-list></app-user-list>
+<!-- <app-toolbar></app-toolbar>
+<app-user-list></app-user-list> -->
 
 
 </div>
