--- a/src/app/my-users-login/login-form/login-form.component.html
+++ b/src/app/my-users-login/login-form/login-form.component.html
@@ -1,10 +1,47 @@
-<p>login-form works!</p>
+<div class="container">
 
 
+    <h1 [style.font.family]="'Jost'">Welcome to myUsers</h1>
+    <p [style.font.family]="'Jost'">Sign in to the portal below</p>
 
 
+    <!-- <button routerLink="/myUsers" [style.cursor]="'pointer'">Navigate to Post List</button>
+    <router-outlet></router-outlet> -->
 
+    <mat-card>
+        <form class="example-form">
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Email</mat-label>
+              <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+                     placeholder="Ex. pat@admiralgroup.com">
+              <mat-hint>Type in email!</mat-hint>
+              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                Please enter a valid email address
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
 
+            <br>
+            <br>
 
-<button routerLink="/main"[style.cursor]="'pointer'">Navigate to Post List</button>
-<router-outlet></router-outlet>
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Password</mat-label>
+                <input type="password" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                  Please enter Password
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                  Password is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+
+              <button mat-raised-button>Login</button>
+
+            
+          </form>
+
+    </mat-card>
+
+</div>
