--- a/src/app/my-users-login/login-form/login-form.component.html
+++ b/src/app/my-users-login/login-form/login-form.component.html
@@ -1,47 +1,46 @@
 <div class="container">
 
 
-    <h1 [style.font.family]="'Jost'">Welcome to myUsers</h1>
-    <p [style.font.family]="'Jost'">Sign in to the portal below</p>
+  <h1 [style.font.family]="'Jost'">Welcome to MyUsers</h1>
+  <p [style.font.family]="'Jost'">Sign in to the portal below</p>
+
+  <router-outlet></router-outlet>
+
+  <mat-card>
+    <form class="example-form">
+
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. user@admiralgroup.co.uk">
+        <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Password</mat-label>
+        <input [type]="hide ? 'password' : 'text'" matInput placeholder="Password" [formControl]="passwordFormControl">
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+        <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
+          Password must be at least 6 characters
+        </mat-error>
+        <mat-error *ngIf="passwordFormControl.hasError('required')">
+          Password is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+
+      <br>
+
+      <button routerLink="/myUsers" mat-raised-button class="login-btn" >Login</button>
 
 
-    <!-- <button routerLink="/myUsers" [style.cursor]="'pointer'">Navigate to Post List</button>
-    <router-outlet></router-outlet> -->
+    </form>
 
-    <mat-card>
-        <form class="example-form">
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Email</mat-label>
-              <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
-                     placeholder="Ex. pat@admiralgroup.com">
-              <mat-hint>Type in email!</mat-hint>
-              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                Please enter a valid email address
-              </mat-error>
-              <mat-error *ngIf="emailFormControl.hasError('required')">
-                Email is <strong>required</strong>
-              </mat-error>
-            </mat-form-field>
-
-            <br>
-            <br>
-
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Password</mat-label>
-                <input type="password" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher">
-                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                  Please enter Password
-                </mat-error>
-                <mat-error *ngIf="emailFormControl.hasError('required')">
-                  Password is <strong>required</strong>
-                </mat-error>
-              </mat-form-field>
-
-              <button mat-raised-button>Login</button>
-
-            
-          </form>
-
-    </mat-card>
+  </mat-card>
 
 </div>
