fixed login-form bug

--- a/src/app/my-users-app/Components/toolbar/toolbar.component.html
+++ b/src/app/my-users-app/Components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar  [style.font.family]="'Jost'" fxLayoutAlign="space-between center">
     <span class="toolbar-title">MyUsers</span>
 
-    <button mat-raised-button class="logOut-btn"> Log Out</button>
+    <button mat-raised-button class="logOut-btn" (click)="onClick()"> Log Out</button>
 </mat-toolbar>
 
 
